--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -24,18 +24,13 @@ jobs:
       - name: Build container image
         run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
 
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          token: ${{ secrets.DIGITAL_OCEAN_TOKEN }}
-    
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 600
-      
-      - name: Remove all old images
-        run: if [ ! -z "$(doctl registry repository list | grep "$(echo $IMAGE_NAME)")" ]; then doctl registry repository delete-manifest $(echo $IMAGE_NAME) $(doctl registry repository list-tags $(echo $IMAGE_NAME) | grep -o "sha.*") --force; else echo "No repository"; fi
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push image to DigitalOcean Container Registry
+      - name: Push image to Dockerhub Container Registry
         run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
         
   deploy:
@@ -50,10 +45,10 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: 
-          envs: IMAGE_NAME,REGISTRY,{{ secrets.DIGITAL_OCEAN_TOKEN }},GITHUB_SHA
+          envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,{{ secrets.DOCKER_USER }},{{ secrets.DOCKERHUB_TOKEN }}
           script: |
             # Login to registry
-            docker login -u ${{ secrets.DIGITAL_OCEAN_TOKEN }} -p ${{ secrets.DIGITAL_OCEAN_TOKEN }} registry.digitalocean.com
+            docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKERHUB_TOKEN }}
             # Stop running container
             docker stop $(echo $IMAGE_NAME)
             # Remove old container
